<resources>
    <string name="app_name">CTTL VR</string>


    <!-- EasyPermissions String-->
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_location_contacts">This app needs access to your location and contacts to know where and who you are.</string>
    <string name="rationale_sms">This app needs access to your sms to read all your great messages.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="settings_dialog_canceled">Settings dialog canceled</string>
    <string name="returned_from_app_settings_to_activity">Returned from app settings to MainActivity</string>
    <string name="has_read_sms_permission">Has read sms permission: %b</string>
    <!--add by glf-->
    <string name="rationale_read_external_storage">VrApp 需要使用读取SD的权限才能正常运行</string>
    <string name="title">中国信息通信研究院</string>
    <string name="subtitle">泰尔终端实验室</string>
    <string name="paragraph1">中国信息通信研究院，前身为邮电部邮电科学研究院(始建于1957年)，1998年成为信息产业部电信研究院，2008年更名为工业和信息化部电信研究院，2014年启用新名称“中国信息通信研究院”（以下简称“中国信通院”），是工业和信息化部直属科研事业单位。</string>
    <string name="image_caption">CTTL</string>
    <string name="paragraph2">多年来，中国信通院秉持“国家高端专业智库、行业创新发展平台”的宗旨定位和“厚德实学 兴业致远”的文化价值理念，亲历了我国信息通信业由小到大、由弱渐强的历史进程，参与了各个关键节点的重大决策，在行业发展的重大战略、规划、政策、标准和测试认证等方面发挥了有力支撑作用，为我国通信业跨越式发展和产业创新壮大起到了重要推动作用。
    \n\n2012年以来，中国信通院坚持“抓改革　促创新　优结构　稳增长”的方针，采取系列举措推进各项工作。2015年，中国信通院启动新的战略转型，按照“四大领域、五大业务、六个专业”的新布局，积极谋划、推进各项工作，发挥电信业引领优势、强化互联网综合优势、建立信息化新优势、形成两化融合新亮点，在国家ICT领域重大战略和重大政策制定中发挥核心支撑作用、在ICT行业创新发展中起到重要引领作用、在国际ICT领域有较高影响力，到2020年建成国家高端专业智库，成为行业创新发展平台，为国家实现网络强国、制造强国两大战略以及两化深度融合发展目标做出更大贡献！</string>
    <string name="play_btn">点击播放</string>
    <string name="more_tv">了解更多</string>
    <string name="cttl_intro">中国泰尔实验室（CTTL）始建于1981年，行政隶属于信息产业部电信研究院（CATR），由信息产业部和国家质量监督检验检疫总局授权设立。是集通信技术发展研究，通信产品标准、测试方法 、通信计量标准、计量方法研究，以及国内外产品的测试、验证、技术评估、测试仪表计量以及通信软件的评估、验证为一体的高科技组织。</string>
</resources>
