<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <Button
        android:id="@+id/btn_play"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:text="@string/play_btn"
        android:layout_margin="10dip"
        android:layout_alignParentBottom="true"
        android:background="#f38703"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >
            <com.google.vr.sdk.widgets.pano.VrPanoramaView
                android:id="@+id/pano_view"
                android:layout_width="match_parent"
                android:scrollbars="@null"
                android:layout_height="250dip"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/detail_text"
                    android:textSize="14sp"
                    android:textColor="#666666"
                    android:layout_margin="10dp"
                    android:text="@string/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/turn_over_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_action_expand"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#f2f2f2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dip"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:text="@string/more_tv"
                android:textColor="#000000"
                android:textSize="16sp"/>
            <ImageView
                android:id="@+id/img_qr_weibo"
                android:layout_width="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_height="180dp"
                android:layout_marginBottom="55dp"
                android:background="@drawable/weibo"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>